fixed manage pack tiles' version and content info being squished together

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -114,6 +114,10 @@ path, svg {
     border-color: #6b1411;
 }
 
+.manage_pack_tile {
+    margin-bottom: 1.5rem;
+}
+
 .flex-options {
     display: flex;
     flex-wrap: wrap;
